k8s/manifests/base/infrastructure/monitoring/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
spec:
  rules:
    - host: grafana.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loki-stack-grafana
                port:
                  number: 80
    - host: control-plane.tailda280a.ts.net 
      http:
        paths:
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: loki-stack-grafana
                port:
                  number: 80
    - host: streamlit.100.101.188.22.nip.io 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loki-stack-grafana
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-ingress
spec:
  rules:
    - host: loki.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loki-stack
                port:
                  number: 3100
